--- a/scss/components/_course-card.scss
+++ b/scss/components/_course-card.scss
@@ -2,7 +2,7 @@
   &__card {
     background-color: $white;
     border-radius: 20px;
-    padding: 36px 30px;
+    padding: 36px 12px 32px 20px;
     box-shadow: 0px 4px 32px 0px $blue-tint;
 
     &-icon {
@@ -25,6 +25,22 @@
 
     &-description {
       margin-bottom: 24px;
+    }
+  }
+}
+
+@media (min-width: $breakpoint-md) {
+  .course {
+    &__card {
+      padding: 36px 24px 32px 20px;
+    }
+  }
+}
+
+@media (min-width: $breakpoint-xxl) {
+  .course {
+    &__card {
+      padding: 36px 35px 45px 20px;
     }
   }
 }
